--- a/src/app/Components/create-contest/create-contest.component.html
+++ b/src/app/Components/create-contest/create-contest.component.html
@@ -1,81 +1,162 @@
-<div class="modal fade modal-lg mt-5 center " id="exampleModal2" tabindex="-1" aria-labelledby="exampleModal2Label" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title " id="exampleModal2Label">Create Contest </h5>
-          <button type="button" class="btn-close ps-0 pe-3 border-none shadow-none  " data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-
-        <div class="modal-body ">      
-            <form (ngSubmit)="handleSubmitProblem(createContestForm)" [formGroup]="createContestForm">
-                <div class="row" id="open-row" class="">
-                    <div class="mt-3  d-flex">
-                    <label class="col-md-2 form-label mt-2 "for="submit-open"  >Type</label>
-                        <div class="btn-group ms-3 " role="group" >
-                            <button type="radio" class="border btn btn btn-secondary active" value="0"> <img src="/assets/images/classical.gif" height="20" width="20">Classical Contest</button>                           
-                            <button type="radio" class="border btn btn-secondary " value="1"><img src="/assets/images/group.png" height="20" width="20"> Group Contest</button>
-                            <button type="radio " class="border btn btn-secondary" value="2"><img src="/assets/images/replay.png" height="20" width="20">Replay</button>
-                        </div>
-                    </div> 
+<mat-dialog-content>
+    <div class="dialog-container">
+        <h2 class="dialog-title">Create Contest</h2>
+        <form [formGroup]="createContestForm">
+            <div class="row" id="open-row" class="">
+                <div class="mt-3  d-flex">
+                    <label class="col-md-2 form-label mt-2 " for="submit-open">Type</label>
+                    <div class="btn-group ms-3 " role="group">
+                        <button type="radio" class="border btn btn btn-secondary"
+                            [class.active]="createContestForm.value.type === 'CLASSIC'" (click)="onClassicClick()"
+                            [ngStyle]="{'background-color': createContestForm.value.type === 'CLASSIC' ? 'grey' : 'white'}">
+                            <img src="/assets/images/classical.gif" height="20" width="20">
+                            <span [ngStyle]="{'color': createContestForm.value.type === 'CLASSIC'? 'white' : 'black'}">
+                                Classical Contest
+                            </span>
+                        </button>
+                        <button type="radio" class="border btn btn-secondary "
+                            [class.active]="createContestForm.value.type === 'GROUP'" (click)="onGroupClick()"
+                            [ngStyle]="{'background-color': createContestForm.value.type === 'GROUP' ? 'grey' : 'white'}">
+                            <img src="/assets/images/group.png" height="20" width="20">
+                            <span [ngStyle]="{'color': createContestForm.value.type === 'GROUP'? 'white' : 'black'}">
+                                Group Contest
+                            </span>
+                        </button>
+                    </div>
                 </div>
-       
-                <div class="mt-3 mb-3 d-flex">
-                    <label for="title" class="col-md-2 mt-2 me-3">Title</label>
-                     <input type="text" required id="title" class="form-control" formControlName="title" />
-                     <div *ngIf="createContestForm.get('title')?.errors && createContestForm.get('title')?.touched ">
-                       <span *ngIf="createContestForm.get('title')?.getError('required')" class="m-0" style="color:red">Contest title can't be empty.</span>
-                     </div>
-                     <i></i>
-                  </div>
-                  
-                  <div class="mb-3 mt-3 d-flex">
-                    <label for="durationSeconds" class="col-md-2 mt-2 me-3">Length</label>
-                     <input id="durationSeconds" class="form-control" formControlName="durationSeconds" type="text" placeholder="hh:mm:ss"/>
-                     <div *ngIf="createContestForm.get('durationSeconds')?.errors && createContestForm.get('durationSeconds')?.touched ">
-                         <span *ngIf="createContestForm.get('durationSeconds')?.getError('required')" class="m-0" style="color:red">The contest length must be less than 1 year.</span>
-                     </div>
-                     <i></i>
-                  </div> 
-  
-                  <div class="mt-3 mb-3 d-flex">
-                    <label for="beginTime" class="col-md-2 me-3">Begin Time(UTC+2)</label>
-                     <input id="beginTime" class="form-control" formControlName="beginTime" type="text" placeholder="2024-04-17 23:00:00"/>
-                     <div *ngIf="createContestForm.get('beginTime')?.errors && createContestForm.get('beginTime')?.touched ">
-                         <span *ngIf="createContestForm.get('beginTime')?.getError('required')" class="m-0" style="color:red">The contest begin time is required to create a contest.</span>
-                     </div>
-                     <i></i>
-                  </div>
-              
-                <div class="mt-3 mb-3 d-flex">
-                <label for="visibility" class="col-md-2 me-3 mt-4">Openness</label>
-                <select id="form3" class="form-select mt-3" formControlName="visibility" >
-                    <option value="">data from database</option>
-                    <option value="">data from database</option>
-                    <option value="">data from database</option>
-                    <option value="">data from database</option>
+            </div>
+
+            <div class="mt-3 mb-3 d-flex">
+                <label for="title" class="col-md-2 mt-2 me-3">Title</label>
+                <input type="text" required id="contest-title" class="form-control" placeholder="Title"
+                    formControlName="title" />
+                <div *ngIf="createContestForm.get('title')?.errors && createContestForm.get('title')?.touched ">
+                    <span *ngIf="createContestForm.get('title')?.getError('required')" class="m-0"
+                        style="color:red">Required</span>
+                </div>
+                <i></i>
+            </div>
+
+            <div class="mb-3 mt-3 d-flex">
+                <label for="durationSeconds" class="col-md-2 mt-2 me-3">Duration</label>
+                <input id="durationSeconds" class="form-control" formControlName="durationSeconds" type="text"
+                    placeholder="duration in minutes" />
+                <div
+                    *ngIf="createContestForm.get('durationSeconds')?.errors && createContestForm.get('durationSeconds')?.touched ">
+                    <span *ngIf="createContestForm.get('durationSeconds')?.getError('required')" class="m-0"
+                        style="color:red">Required</span>
+                </div>
+                <i></i>
+            </div>
+
+            <div *ngIf="isGroupSelected" class="mt-3 mb-3 d-flex">
+                <label for="visibility" class="col-md-2 me-3 mt-4">Group</label>
+                <select *ngIf="userGroups.length >= 1" id="form3" class="form-select mt-3" formControlName="groupId">
+                    <option value="0" selected>Select Group</option>
+                    <option *ngFor="let group of userGroups" value="{{group.id}}">{{group.name}}</option>
                 </select>
-                <div *ngIf="createContestForm.get('visibility')?.errors && createContestForm.get('visibility')?.touched ">
-                    <span *ngIf="createContestForm.get('visibility')?.getError('required')" class="m-0" style="color:red">You must select the visibility of the contest.</span>
+                <span *ngIf="userGroups.length == 0">You are not managing any group.</span>
+                <div *ngIf="createContestForm.get('groupId')?.errors && createContestForm.get('groupId')?.touched ">
+                    <span *ngIf="createContestForm.get('groupId')?.getError('required')" class="m-0"
+                        style="color:red">Required</span>
                 </div>
-              <i></i>
-              </div>
+                <i></i>
+            </div>
 
-              <div class="mt-3 mb-3 d-flex">
-                 <label for="description" class="col-md-2 mt-3 me-3">Description</label>
-                  <textarea id="description" class="form-control" formControlName="description" placeholder="description goes here"></textarea>
-                  <div *ngIf="createContestForm.get('description')?.errors && createContestForm.get('description')?.touched ">
-                      <span *ngIf="createContestForm.get('description')?.getError('required')" class="m-0" style="color:red">description is mandatory</span>
-                  </div>
-                  <i></i>
-               </div>
-           
-            </form>
-        </div>
+            <div class="mt-3 mb-3 d-flex">
+                <label for="beginTime" class="col-md-2 me-3">Begin Time(UTC+2)</label>
+                <input id="beginTime" class="form-control" formControlName="beginTime" type="text"
+                    placeholder="2024-04-17 23:00:00" type="datetime-local" />
+                <div *ngIf="createContestForm.get('beginTime')?.errors && createContestForm.get('beginTime')?.touched ">
+                    <span *ngIf="createContestForm.get('beginTime')?.getError('required')" class="m-0"
+                        style="color:red">Required</span>
+                </div>
+                <i></i>
+            </div>
 
-        <div class="modal-footer d-flex">
-           <button type="button" class="btn btn-danger " data-bs-dismiss="modal">Close</button>
-           <button type="submit" class="btn btn-primary "[disabled]="createContestForm.invalid" > Confirm</button>
-        </div>
-        </div>
+            <div class="mt-3 mb-3 d-flex">
+                <label for="visibility" class="col-md-2 me-3 mt-4">Openness</label>
+                <select id="form3" class="form-select mt-3" formControlName="visibility">
+                    <option value="PUBLIC">Public</option>
+                    <option value="PRIVATE">Private</option>
+                </select>
+                <div
+                    *ngIf="createContestForm.get('visibility')?.errors && createContestForm.get('visibility')?.touched ">
+                    <span *ngIf="createContestForm.get('visibility')?.getError('required')" class="m-0"
+                        style="color:red">Required</span>
+                </div>
+                <i></i>
+            </div>
+
+            <div class="mb-3 mt-3 d-flex">
+                <label for="password" class="col-md-2 mt-2 me-3">Password</label>
+                <input id="password" class="form-control" formControlName="password" type="password"
+                    placeholder="Password" />
+                <i></i>
+            </div>
+
+            <div class="mt-3 mb-3 d-flex">
+                <label for="description" class="col-md-2 mt-3 me-3">Description</label>
+                <textarea id="description" class="form-control" formControlName="description"
+                    placeholder="Description"></textarea>
+                <div
+                    *ngIf="createContestForm.get('description')?.errors && createContestForm.get('description')?.touched ">
+                    <span *ngIf="createContestForm.get('description')?.getError('required')" class="m-0"
+                        style="color:red">Required</span>
+                </div>
+                <i></i>
+            </div>
+
+            <table formArrayName="problems" class="table table-striped table-borderless">
+                <thead>
+                    <tr>
+                        <th class="text-right">Operations</th>
+                        <th class="text-center">OJ</th>
+                        <th class="text-center">ProbNum</th>
+                        <th class="text-center">Wgt.</th>
+                        <th class="text-center">Alias</th>
+                        <th class="text-center">Letter</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let problem of getFormProblems(); let i = index" [formGroupName]="i"
+                        [id]="'addTable' + i" class="cp_row real">
+                        <td class="text-right">
+                            <button class="btn btn-outline-danger" [disabled]="!enableDeleteProblem" (click)="removeProblemForm(i)">
+                                <i class="fa fa-remove"></i>
+                            </button>
+                        </td>
+                        <td>
+                            <select class="form-select" formControlName="ojType">
+                                <option value="">oj</option>
+                                <option value="CodeForces">Codeforces</option>
+                                <option value="AtCoder">AtCoder</option>
+                            </select>
+                        </td>
+                        <td><input class="form-control" formControlName="problemCode"></td>
+                        <td><input class="form-control text-center" formControlName="problemWeight"></td>
+                        <td><input class="form-control" formControlName="problemAlias"></td>
+                        <td class="text-center">{{getLetter(i)}}</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <div class="form-group">
+                <button class="btn btn-secondary w-100" (click)="addNewProblemForm()">
+                    <i class="fa fa-plus"></i> Add a problem
+                </button>
+            </div>
+        </form>
     </div>
-</div>
+</mat-dialog-content>
+
+<mat-dialog-actions class="dialog-actions">
+    <div class="dialog-actions" style="display: flex; justify-content: flex-end; align-items: flex-end; width: 100%;">
+        <button type="button" class="btn btn-outline-danger" mat-dialog-close>Cancel</button>
+        <button type="submit" class="btn btn-success" [disabled]="createContestForm.invalid"
+            (click)="handleCreateContest()">
+            <span *ngIf="isLoading"><i class="fa fa-spinner fa-spin"></i> Creating</span>
+            <span *ngIf="!isLoading"><i class="fa fa-check"></i> Create</span>
+        </button>
+    </div>
+</mat-dialog-actions>
