--- a/src/app/Components/create-contest/create-contest.component.html
+++ b/src/app/Components/create-contest/create-contest.component.html
@@ -75,11 +75,23 @@
             </div>
 
             <div class="mt-3 mb-3 d-flex">
-                <label for="visibility" class="col-md-2 me-3 mt-4">Openness</label>
-                <select id="form3" class="form-select mt-3" formControlName="visibility">
-                    <option value="PUBLIC">Public</option>
-                    <option value="PRIVATE">Private</option>
-                </select>
+                <label for="visibility" class="col-md-2 me-3 mt-4">visibility</label>
+                <button type="radio" class="border btn btn btn-secondary"
+                    [class.active]="createContestForm.value.visibility === 'PUBLIC'"
+                    (click)="createContestForm.controls['visibility'].setValue('PUBLIC')"
+                    [ngStyle]="{'background-color': createContestForm.value.visibility === 'PUBLIC' ? 'grey' : 'white'}">
+                    <span [ngStyle]="{'color': createContestForm.value.visibility === 'PUBLIC'? 'white' : 'black'}">
+                        Public
+                    </span>
+                </button>
+                <button type="radio" class="border btn btn btn-secondary"
+                    [class.active]="createContestForm.value.visibility === 'PRIVATE'"
+                    (click)="createContestForm.controls['visibility'].setValue('PRIVATE')"
+                    [ngStyle]="{'background-color': createContestForm.value.visibility === 'PRIVATE' ? 'grey' : 'white'}">
+                    <span [ngStyle]="{'color': createContestForm.value.visibility === 'PRIVATE'? 'white' : 'black'}">
+                        Private
+                    </span>
+                </button>
                 <div
                     *ngIf="createContestForm.get('visibility')?.errors && createContestForm.get('visibility')?.touched ">
                     <span *ngIf="createContestForm.get('visibility')?.getError('required')" class="m-0"
@@ -98,7 +110,7 @@
             <div class="mt-3 mb-3 d-flex">
                 <label for="description" class="col-md-2 mt-3 me-3">Description</label>
                 <textarea id="description" class="form-control" formControlName="description"
-                    placeholder="Description"></textarea>
+                    placeholder="Description" rows="4"></textarea>
                 <div
                     *ngIf="createContestForm.get('description')?.errors && createContestForm.get('description')?.touched ">
                     <span *ngIf="createContestForm.get('description')?.getError('required')" class="m-0"
@@ -122,7 +134,8 @@
                     <tr *ngFor="let problem of getFormProblems(); let i = index" [formGroupName]="i"
                         [id]="'addTable' + i" class="cp_row real">
                         <td class="text-right">
-                            <button class="btn btn-outline-danger" [disabled]="!enableDeleteProblem" (click)="removeProblemForm(i)">
+                            <button class="btn btn-outline-danger" [disabled]="!enableDeleteProblem"
+                                (click)="removeProblemForm(i)">
                                 <i class="fa fa-remove"></i>
                             </button>
                         </td>
