fix(create-contest): Change input type to number for problem weight

--- a/src/app/Components/create-contest/create-contest.component.html
+++ b/src/app/Components/create-contest/create-contest.component.html
@@ -147,7 +147,7 @@
                             </select>
                         </td>
                         <td><input class="form-control" formControlName="problemCode"></td>
-                        <td><input class="form-control text-center" formControlName="problemWeight"></td>
+                        <td><input class="form-control text-center" type="number" formControlName="problemWeight"></td>
                         <td><input class="form-control" formControlName="problemAlias"></td>
                         <td class="text-center">{{getLetter(i)}}</td>
                     </tr>
