--- a/src/app/Components/contest-details/contest-details.component.html
+++ b/src/app/Components/contest-details/contest-details.component.html
@@ -13,7 +13,7 @@
             </div>
             <div class="col-4 text-end">
                 <b>End: </b>
-                <span class="timestamp">2023-12-29 23:35 UTC+3</span>
+                <span class="timestamp">{{contest.endTime * 1000 | date:'medium'}}</span>
             </div>
         </div>
         <div class="row">
