--- a/src/app/Components/group/group.component.html
+++ b/src/app/Components/group/group.component.html
@@ -1,1 +1,21 @@
-<p>group works!</p>
+<!-- judge.component.html -->
+<div class="navbar" id="group-tabs">
+    <div class="nav-container">
+        <div class="nav-item">
+            <a class="nav-link active" [routerLink]="['/my-groups']" routerLinkActive #rla="routerLinkActive" [class.active]="rla.isActive" aria-expanded="true">My Groups</a>
+        </div>
+        <div class="nav-item">
+            <a class="nav-link active" [routerLink]="['/explore-groups']" routerLinkActive #rla="routerLinkActive" [class.active]="rla.isActive">Explore</a>
+        </div>
+    </div>
+    <!-- <div class="btn-group" role="group">
+        <button class="btn btn-primary" [routerLink]="['/create-group']">Create Group</button>
+    </div> -->
+
+    <div>
+        <button type="submit" class="btn ms-2 mb-0 border-none shadow-none" data-bs-toggle="modal"
+            data-bs-target="#exampleModal2" value="Create Contest" style="background-color:#0275d8; color:#fff">Create Group</button>
+        <app-create-group></app-create-group>
+    </div>
+
+</div>
