feat: Implement status handling feature
- Construct a status page to display all user submissions
- Implement a filter method for enhanced search functionality
- Retrieve user handle from the authentication service

--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -15,6 +15,9 @@
                 <a class="nav-link p-2 p-lg-3" routerLinkActive="bg-dark text-white" routerLink="problem">Problem</a>
             </li>
             <li *ngIf="isLogin" class="nav_menu nav-item">
+                <a class="nav-link p-2 p-lg-3" routerLinkActive="bg-dark text-white" routerLink="status">Status</a>
+            </li>
+            <li *ngIf="isLogin" class="nav_menu nav-item">
                 <a class="nav-link p-2 p-lg-3" routerLinkActive="bg-dark text-white" routerLink="group">Group</a>
             </li>
             <li *ngIf="isLogin" class="nav_menu nav-item">
