--- a/src/app/Components/pagination/pagination.component.html
+++ b/src/app/Components/pagination/pagination.component.html
@@ -1,8 +1,4 @@
-<!-- <mat-paginator style="background-color: transparent !important; color:#ebebeb"  [length]="totalPages * pageSize"  -->
-
-    <mat-paginator style="background-color: transparent !important; width:fit-content !important;" [length]="totalPages * pageSize" 
-                [pageSize]="pageSize"
-                [pageSizeOptions]="[5, 10, 25, 100]"
-                (page)="onPageChange($event)"
-                aria-label="Select page">
+<mat-paginator style="background-color: transparent !important; width:fit-content !important;"
+    [length]="totalElements" [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 25, 100]"
+    (page)="onPageChange($event)" aria-label="Select page">
 </mat-paginator>
