--- a/src/app/Components/contest/contest.component.html
+++ b/src/app/Components/contest/contest.component.html
@@ -1,7 +1,7 @@
-<div  class="container-fluid" id="problem_list_container" style="margin-top: 20px;">
+<div class="container-fluid" id="problem_list_container" style="margin-top: 20px;">
     <div class="row d-flex">
         <div class="col-md-2 mt-5 pt-2 " id="left-panel">
-            <div class="list-group contest-running " >
+            <div class="list-group contest-running ">
                 <a href="" class="list-group-item" data-category="allContests"> All Contests</a>
                 <a href="" class="list-group-item" data-category="publicContests">Public Contests</a>
                 <a href="" class="list-group-item" data-category="myContests">My Contests</a>
@@ -19,64 +19,67 @@
                 <a href="" class="list-group-item" data-category="group">
                     <img src="/assets/images/group.png"> Group
                 </a>
-   
             </div>
-
         </div>
 
-        
-            <div class="col-md-10 text-center mt-2" id="right-panel">
-                <!-- pagination -->
-                <div class="mt-5 d-lg-flex justify-content-between">
-                    <div class="d-flex col-lg-6 col-12">
-                        <div>
-                            <button mat-button (click)="openCreateContestDialog()"  class="btn ms-2 mb-0 border-none shadow-none" value="Create Contest" style="background-color:#0275d8; color:#fff">Create Contest</button>
-                        </div>
+
+        <div class="col-md-10 text-center mt-2" id="right-panel">
+            <!-- pagination -->
+            <div class="mt-5 d-lg-flex justify-content-between">
+                <div class="d-flex col-lg-6 col-12">
+                    <div>
+                        <button mat-button (click)="openCreateContestDialog()"
+                            class="btn ms-2 mb-0 border-none shadow-none" value="Create Contest"
+                            style="background-color:#0275d8; color:#fff">Create Contest</button>
                     </div>
-                    <app-pagination [totalPages]="totalPages" [pageSize]="pageSize" (pageChange)="onPageChange($event)"
-                        style="width:fit-content !important; "
-                        class="col-lg-6 col-12 d-flex mb-2"></app-pagination>
-
+                    <div>
+                        <button mat-button class="btn ms-2 mb-0 border-none shadow-none" value="Create Contest"
+                            style="background-color:#ffffff; color:black">Filter</button>
+                    </div>
+                    <div>
+                        <button mat-button class="btn ms-2 mb-0 border-none shadow-none" value="Create Contest"
+                            style="background-color:#ffffff; color:black">Reset</button>
+                    </div>
                 </div>
-                <div class="contestTable text-center col-12 w-100">
-                    <table id="listProblem" class="table table-striped table-responsive  table-border" cellspacing="0"
-                        width="100%">
-                        <thead>
-                            <tr class="p-4">
-                                <th class="fav" data-toggle='tooltip' title="Sort by favorite time"></th>
-                                <th class="id ">#</th>
-                                <th class="title">
-                                    Title
-                                    <input #title (input)="searchByTitle(title.value)" type="text" id="title"
-                                        name="title" class="search_text" style="width:50%" />
-                                </th>
-                                <th id="beginTime">Begin Time</th>
-                                <th id="Length ">Length</th>
-                                <th class="title">
-                                    Owner
-                                    <input #owner (input)="searchByOwner(owner.value)" type="text" id="owner"
-                                        name="owner" class="search_text" style="width:50%" />
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let contest of Contests; trackBy:trackByContestId; let i = index">
-                                <td><i class="fas fa-star"></i></td>
-                                <td> {{ i + 1 }} </td>
-                                <td><a [routerLink]="contest.id">{{contest.title}}</a></td>
-                                <td> {{ contest.beginTime * 1000 | date:'medium' }} </td>
-                                <td> {{ contest.duration / 60 / 60 | hoursMinutes }} </td>
-                                <td><a [href]="contest.owner" target="_blank">{{contest.handle}}</a></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <input type="button" class="btn btn-secondary btn-md" id="reset" value="Reset"
-                        style="display: none" />
-                    <input type="button" class="btn btn-secondary btn-md" id="filter" value="Filter"
-                        style="display: none" />
-
-                </div>
+                <app-pagination [totalPages]="totalPages" [pageSize]="pageSize" (pageChange)="onPageChange($event)"
+                    style="width:fit-content !important; " class="col-lg-6 col-12 d-flex mb-2"></app-pagination>
             </div>
-        
+            <div class="contestTable text-center col-12 w-100">
+                <table id="listProblem" class="table table-striped table-responsive  table-border" cellspacing="0"
+                    width="100%">
+                    <thead>
+                        <tr class="p-4">
+                            <th class="fav" data-toggle='tooltip' title="Sort by favorite time"></th>
+                            <th class="id ">#</th>
+                            <th class="title">
+                                Title
+                                <input #title (input)="searchByTitle(title.value)" type="text" id="title" name="title"
+                                    class="search_text" style="width:50%" />
+                            </th>
+                            <th id="beginTime">Begin Time</th>
+                            <th id="Length ">Length</th>
+                            <th class="title">
+                                Owner
+                                <input #owner (input)="searchByOwner(owner.value)" type="text" id="owner" name="owner"
+                                    class="search_text" style="width:50%" />
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let contest of Contests; trackBy:trackByContestId; let i = index">
+                            <td><i class="fas fa-star"></i></td>
+                            <td> {{ i + 1 }} </td>
+                            <td><a [routerLink]="contest.id">{{contest.title}}</a></td>
+                            <td> {{ contest.beginTime * 1000 | date:'medium' }} </td>
+                            <td> {{ contest.duration / 60 / 60 | hoursMinutes }} </td>
+                            <td><a [href]="contest.owner" target="_blank">{{contest.handle}}</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <input type="button" class="btn btn-secondary btn-md" id="reset" value="Reset" style="display: none" />
+                <input type="button" class="btn btn-secondary btn-md" id="filter" value="Filter"
+                    style="display: none" />
+            </div>
+        </div>
     </div>
 </div>
