--- a/src/app/Components/status/status.component.html
+++ b/src/app/Components/status/status.component.html
@@ -2,25 +2,43 @@
     <div class="row">
         <div class="col-md-2 mt-5 pt-2" id="left-panel">
             <div class="list-group bg-dark" id="prob-category">
-                <button [style.background-color]="allButtonColor" (click)="getAllSubmissions()" class="list-group-item left-align-text" data-category="all"><span [style.color]="allTextColor">All</span></button>
-                <button [style.background-color]="mineButtonColor" (click)="getMineSubmissions()" href="javascript:void(0)" class="list-group-item left-align-text" data-category="mine">
+                <button [style.background-color]="allButtonColor" (click)="getAllSubmissions()"
+                    class="list-group-item left-align-text" data-category="all"><span
+                        [style.color]="allTextColor">All</span></button>
+                <button [style.background-color]="mineButtonColor" (click)="getMineSubmissions()"
+                    href="javascript:void(0)" class="list-group-item left-align-text" data-category="mine">
                     <span [style.color]="mineTextColor">Mine</span>
                 </button>
             </div>
         </div>
         <div class="col-md-10 text-center" id="right-panel">
-            <app-pagination [totalElements]="totalElements" [totalPages]="totalPages" [pageSize]="pageSize" (pageChange)="onPageChange($event)"></app-pagination>
+            <div class="mt-5 d-lg-flex justify-content-between">
+                <div class="d-flex col-lg-6 col-12">
+                    <div>
+                        <button mat-button (click)="filterSubmissions()" class="btn ms-2 mb-0 border-none shadow-none"
+                            value="Create Contest" style="background-color:#ffffff; color:black">Filter</button>
+                    </div>
+                    <div>
+                        <button mat-button (click)="resetFilters()" class="btn ms-2 mb-0 border-none shadow-none"
+                            value="Create Contest" style="background-color:#ffffff; color:black">Reset</button>
+                    </div>
+                </div>
+                <app-pagination [totalElements]="totalElements" [totalPages]="totalPages" [pageSize]="pageSize"
+                    (pageChange)="onPageChange($event)"></app-pagination>
+            </div>
             <table id="listProblem" class="table table-striped table-responsive  table-borderless" cellspacing="0"
                 width="100%">
                 <thead>
                     <tr>
                         <th class="oj">
                             Who
-                            <input [(ngModel)]="userHandle" type="text" id="handle" name="handle" class="search_text" style="width:95%" (keyup.enter)="onEnterPress()" />
+                            <input [(ngModel)]="userHandle" type="text" id="handle" name="handle" class="search_text"
+                                style="width:95%" (keyup.enter)="onEnterPress()" />
                         </th>
                         <th class="prob_num">
                             OJ
-                            <select [(ngModel)]="oj" id="OJ_s_Id" name="OJ_s_Id" class="search_text" style="width:100%" (change)="onEnterPress()">
+                            <select [(ngModel)]="oj" id="OJ_s_Id" name="OJ_s_Id" class="search_text" style="width:100%"
+                                (change)="onEnterPress()">
                                 <option value="">All</option>
                                 <option value="CodeForces">CodeForces</option>
                                 <option value="AtCoder">AtCoder</option>
@@ -28,7 +46,8 @@
                         </th>
                         <th class="title">
                             Prob
-                            <input [(ngModel)]="problemCode" type="text" id="prob" name="prob" class="search_text" style="width:95%" (keyup.enter)="onEnterPress()" />
+                            <input [(ngModel)]="problemCode" type="text" id="prob" name="prob" class="search_text"
+                                style="width:95%" (keyup.enter)="onEnterPress()" />
                         </th>
                         <th class="source hidden-md-down">
                             Verdict
@@ -41,7 +60,8 @@
                         </th>
                         <th class="source hidden-md-down">
                             Lang
-                            <input [(ngModel)]="language" type="text" id="language" name="language" class="search_text" style="width:95%" (keyup.enter)="onEnterPress()" />
+                            <input [(ngModel)]="language" type="text" id="language" name="language" class="search_text"
+                                style="width:95%" (keyup.enter)="onEnterPress()" />
                         </th>
                         <th class="source hidden-md-down">
                             Submitted
@@ -52,12 +72,16 @@
                     <tr *ngFor="let submission of submissions; let i = index;">
                         <td> <a href="profile/{{submission.userHandle}}">{{ submission.userHandle }}</a> </td>
                         <td><a target="_blank">{{ submission.ojType }}</a></td>
-                        <td> <a href="problem/{{submission.ojType}}/{{submission.problemCode}}">{{ submission.problemCode }}</a> </td>
-                        <td [style.color]="submission.verdict === 'Accepted' ? 'darkgreen' : 'red'"> {{ submission.verdict }} </td>
+                        <td> <a href="problem/{{submission.ojType}}/{{submission.problemCode}}">{{
+                                submission.problemCode }}</a> </td>
+                        <td [style.color]="submission.verdict === 'Accepted' ? '#5cb85c' : 'red'"
+                            [style.font-weight]="submission.verdict === 'Accepted' ? 'bold' : ''">
+                            {{ submission.verdict }}
+                        </td> <!-- TODO: Implement link to open submission details if the user open it -->
                         <td> {{ submission.timeUsage }} </td>
                         <td> {{ submission.memoryUsage }} </td>
                         <td> {{ submission.language }} </td>
-                        <td> {{ submission.submitTime * 1000 | date:'medium' }} </td>
+                        <td> {{ submission.submitTime * 1000 | timeAgo }} </td>
                     </tr>
                 </tbody>
             </table>
