feat: Implement user profile and fix some bugs

--- a/src/app/Components/problem/problem.component.html
+++ b/src/app/Components/problem/problem.component.html
@@ -5,11 +5,11 @@
                 <a href="javascript:void(0)" class="list-group-item" data-category="all">All</a>
                 <a href="javascript:void(0)" class="list-group-item" data-category="solved">
                     Solved
-                    <span class="tag tag-success tag-pill float-sm-right">30</span>
+                    <span class="tag tag-success tag-pill float-sm-right">{{SolvedAttemptedProblemsCount.solved}}</span>
                 </a>
                 <a href="javascript:void(0)" class="list-group-item" data-category="attempted">
                     Attempted
-                    <span class="tag tag-default tag-pill float-sm-right">31</span>
+                    <span class="tag tag-default tag-pill float-sm-right">{{SolvedAttemptedProblemsCount.attempted}}</span>
                 </a>
                 <a href="javascript:void(0)" class="list-group-item" data-category="favorites">
                     Favorites
