--- a/src/app/Components/contest/contest.component.css
+++ b/src/app/Components/contest/contest.component.css
@@ -34,6 +34,10 @@ a {
     text-decoration: none;
 }
 
+.left-align-text {
+    text-align: left;
+}
+
 /* 995 */
 @media only screen and(max-width: 991px) {
     #left-panel{
