--- a/src/app/Components/contest/contest.component.html
+++ b/src/app/Components/contest/contest.component.html
@@ -2,23 +2,15 @@
     <div class="row d-flex">
         <div class="col-md-2 mt-5 pt-2 " id="left-panel">
             <div class="list-group contest-running ">
-                <a href="" class="list-group-item" data-category="allContests"> All Contests</a>
-                <a href="" class="list-group-item" data-category="publicContests">Public Contests</a>
-                <a href="" class="list-group-item" data-category="myContests">My Contests</a>
-                <a href="" class="list-group-item" data-category="participation"> My Participation </a>
-                <a href="" class="list-group-item" data-category="arrangement">My Arrangement</a>
-                <a href="" class="list-group-item" data-category="group">My Group</a>
-                <a href="" class="list-group-item" data-category="favorites">My Favorites</a>
-                <a href="" class="list-group-item" data-category="follow"> My Follow</a>
+                <button *ngFor="let button of buttons" [ngStyle]="button.style" (click)="button.click()"
+                    class="list-group-item left-align-text">{{button.name}}</button>
                 <input type="hidden" name="category" value="" />
             </div>
             <div class="list-group contest-category  mt-3 " style="padding-right:0; margin: 0 0 10px 0">
-                <a href="" class="list-group-item " data-category="classical">
-                    <img src="/assets/images/classical.gif"> Classical
-                </a>
-                <a href="" class="list-group-item" data-category="group">
-                    <img src="/assets/images/group.png"> Group
-                </a>
+                <button *ngFor="let button of buttonsType" [ngStyle]="button.style" (click)="button.click()"
+                    class="list-group-item left-align-text">
+                    <img [src]="button.img"> {{button.name}}
+                </button>
             </div>
         </div>
 
@@ -34,15 +26,15 @@
                     </div>
                     <div>
                         <button mat-button class="btn ms-2 mb-0 border-none shadow-none" value="Create Contest"
-                            style="background-color:#ffffff; color:black">Filter</button>
+                            style="background-color:#ffffff; color:black" (click)="filterContests()">Filter</button>
                     </div>
                     <div>
                         <button mat-button class="btn ms-2 mb-0 border-none shadow-none" value="Create Contest"
-                            style="background-color:#ffffff; color:black">Reset</button>
+                            style="background-color:#ffffff; color:black" (click)="reset()">Reset</button>
                     </div>
                 </div>
-                <app-pagination [totalPages]="totalPages" [pageSize]="pageSize" (pageChange)="onPageChange($event)"
-                    style="width:fit-content !important; " class="col-lg-6 col-12 d-flex mb-2"></app-pagination>
+                <app-pagination [totalElements]="totalElements" [totalPages]="totalPages" [pageSize]="pageSize"
+                    (pageChange)="onPageChange($event)"></app-pagination>
             </div>
             <div class="contestTable text-center col-12 w-100">
                 <table id="listProblem" class="table table-striped table-responsive  table-border" cellspacing="0"
@@ -53,15 +45,15 @@
                             <th class="id ">#</th>
                             <th class="title">
                                 Title
-                                <input #title (input)="searchByTitle(title.value)" type="text" id="title" name="title"
-                                    class="search_text" style="width:50%" />
+                                <input [(ngModel)]="title" type="text" id="title" name="title" class="search_text"
+                                    style="width:50%" (keyup.enter)="filterContests()" />
                             </th>
                             <th id="beginTime">Begin Time</th>
                             <th id="Length ">Length</th>
                             <th class="title">
                                 Owner
-                                <input #owner (input)="searchByOwner(owner.value)" type="text" id="owner" name="owner"
-                                    class="search_text" style="width:50%" />
+                                <input [(ngModel)]="owner" type="text" id="owner" name="owner" class="search_text"
+                                    style="width:50%" (keyup.enter)="filterContests()" />
                             </th>
                         </tr>
                     </thead>
@@ -72,7 +64,7 @@
                             <td><a [routerLink]="contest.id">{{contest.title}}</a></td>
                             <td> {{ contest.beginTime * 1000 | date:'medium' }} </td>
                             <td> {{ contest.duration / 60 / 60 | hoursMinutes }} </td>
-                            <td><a [href]="contest.owner" target="_blank">{{contest.handle}}</a></td>
+                            <td><a [href]="'profile/' + contest.handle">{{contest.handle}}</a></td>
                         </tr>
                     </tbody>
                 </table>
