--- a/src/app/Components/submit-result/submit-result.component.html
+++ b/src/app/Components/submit-result/submit-result.component.html
@@ -16,8 +16,8 @@
       <tbody>
         <tr>
           <td class="status" scope="row"
-          [style.color]="result.verdict === 'Accepted' ? '#5cb85c' : result.verdict === 'In Queue' ? 'black' : 'red'"
-          [style.font-weight]="result.verdict === 'Accepted' ? 'bold' : ''">
+            [style.color]="result.verdict === 'Accepted' ? '#5cb85c' : result.verdict === 'In Queue' ? 'black' : 'red'"
+            [style.font-weight]="result.verdict === 'Accepted' ? 'bold' : ''">
             {{ result.verdict }}
             <i *ngIf="isLoading" class="fa fa-spinner fa-spin"></i>
           </td>
@@ -34,13 +34,12 @@
 
     <div id="code-solution">
       <h3 class="code-title">Solution:</h3>
-      <pre class="code-block line-numbers">
-        <code class="language-cpp">
-          {{result.solution}}
+      <pre class="code-block">
+        <code class="language-cpp">{{result.solution}}
         </code>
       </pre>
     </div>
-    
+
   </div>
 </mat-dialog-content>
 
