--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -3,7 +3,7 @@
 		<div class="box col-md-6 col-lg-4">
 			<form (ngSubmit)="handleLogin()"[formGroup]="loginForm" class="form">
 				<h2>Sign In</h2>
-				<app-form-input [controller]="loginForm.controls.userHandle" [span]="'User Handle'"  [span]="'validations'"></app-form-input>
+				<app-form-input [controller]="loginForm.controls.userHandle" [span]="'User Handle'"  ></app-form-input>
 				<app-form-input [controller]="loginForm.controls.userPassword" [span]="'Password'" [inputType]="'password'" ></app-form-input>   
 				<button type="submit" [disabled]="loginForm.invalid" >
 					<i *ngIf="isLoading" class="fa fa-spinner fa-spin"></i>
